--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
---
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
 title: lest-day技术站
 description: 技术和工具管理站点
-sidebar: 1
